--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+results/cypress-results.json
+results/karma-results.json
+results/lint-results.json
+results/mochawesome/mochawesome.json
