--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "date-fns": "3.6.0",
     "rxjs": "7.8.1",
     "tslib": "2.6.3",
+    "webstomp-client": "1.2.6",
     "zone.js": "0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.6",
+    "@angular-devkit/build-angular": "18.2.0",
     "@angular/cli": "18.2.0",
     "@angular/compiler-cli": "18.2.0",
     "@angular/localize": "18.2.0",
@@ -54,7 +55,7 @@
     "karma-mocha-reporter": "2.2.5",
     "mochawesome": "7.1.3",
     "mochawesome-merge": "4.3.0",
-    "ng2ninja": "^4.0.0",
+    "ng2ninja": "5.0.0",
     "prettier": "3.3.3",
     "typescript": "5.5.4",
     "typescript-eslint": "8.1.0"
